# FIBER_EYE

./: .gitignore  Contrast_Calculator.py  PREPROCESS_COLOUR.py  Preprocessor.py  README.md  STATS.py  config.py  data.yaml  mlflow.db  nomenclature.yaml  pyproject.toml  requirements.txt  test.py  test2.py
1_PREPROCESSING/: PREPROCESS.py  preparation.py
1_PREPROCESSING/old/: rename.py
2_CLASSIC_CV/: CV_FUNCTIONALITY.py  impurities.py  particles.py  vision.py
2_PROCESSING/CLASSIC_CV/: CV_FUNCTIONALITY.py  impurities.py  particles.py
2_PROCESSING/RF/: FOREST_FUNCTIONALITY.py  PREDICT_FUNCTIONALITY.py  RF_FUNCTIONALITY.py  predict.py  randomforest.py  train.py  tuning.py
2_PROCESSING/UNET/: PREDICT_FUNCTIONALITY.py  UNET_FUNCTIONALITY.py  channel_importance.py  dataset.py  model.py  predict.py  train.py
2_PROCESSING/UNET/stats/: channel_importance.py  mean_std.py
2_PROCESSING/YOLO/: PREDICT_FUNCTIONALITY.py  predict.py  train.py
3_POSTPROCESSING/: LOSS_FNS.py  METRIC_FUNCTIONALITY.py  metrics.py
z_YUV_Experiments/: test.py
